fix code qualitiy issues (#206866)